--- a/WeekFlex/app/src/main/res/values/strings.xml
+++ b/WeekFlex/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">WeekFlex</string>
     <string name="kakao_app_key">a6e7d1dfcdab3e23056bbced8c2e7097</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
